# project19

./: .gitignore  README.md  pyproject.toml
src/: processing.py
tests/: test_processing.py
