[tool.poetry]
name = "bank-widget"
version = "0.1.0"
description = "Widget for filtering and sorting bank operations."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^7.1.1"
mypy = "^1.14.1"
isort = "^5.13.2"
pytest = "^8.3.4"

[tool.flake8]
max-line-length = 88
exclude = [
    "venv",
    ".venv",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache"
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["src"]
